--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -151,9 +151,9 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$200 per month</b></h2>
+                                    <h2><b>$750 per app</b></h2>
+                                    <h2 class="h2-price"><b>$75 per month</b></h2>
                                     <h3><b>No setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
                                     <h3>Development for custom mobile app</h3>
                                     <h3>Deployment to both the Apple and Google app stores</h3>
                                     <h3>Option for tab and/or side menu navigation</h3>
@@ -162,7 +162,7 @@
                                     <h3>Custom branding and push notifications</h3>
                                     <h3>Unlimited updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3UbGG29" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3tNFFCz" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -179,48 +179,19 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2 class="h2-price"><b>$250 per month</b></h2>
-                                    <h3><b>No setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
-                                    <h3>Development for custom mobile app and custom website</h3>
+                                    <h2><b>$1,000 for app & website</b></h2>
+                                    <h2 class="h2-price"><b>$100 per month</b></h2>
+                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3>Development for custom mobile app and website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Unlimited updates made as needed to publish updated content.</h3>
-                                    <h3><b><i>SAVE $50 PER MONTH!</i></b></h3>
+                                    <h3><b>$50 per year for hosting</b></h3><br>
+                                    <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-boxes-stacked"></i>&nbsp;
-                                    Mobile App Bundle
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    <h2><b>$150 per month per app</b></h2>
-                                    <h3><b>No setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
-                                    <h3>Two or more apps developed</h3>
-                                    <h3>Development for custom mobile app and custom website</h3>
-                                    <h3>Deployment to both the Apple and Google app stores</h3>
-                                    <h3>Option for tab and/or side menu navigation</h3>
-                                    <h3>No page limit!</h3>
-                                    <h3>No limit for feature integrations!</h3>
-                                    <h3>Unlimited updates made as needed to publish updated content</h3>
-                                    <h3><b><i>SAVE $50 PER MONTH PER APP!</i></b></h3>
-                                    <h3><b><i>GREAT OPTION FOR MULTIPLE APPS!</i></b></h3><br>
-                                    <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3RMey48" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://bit.ly/3ESi5eb" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -244,9 +215,9 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$150 per month</b></h2>
+                                    <h2><b>$500 per app</b></h2>
+                                    <h2 class="h2-price"><b>$50 per month</b></h2>
                                     <h3><b>No setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
                                     <h3>Development for custom mobile app</h3>
                                     <h3>Deployment to both the Apple and Google app stores</h3>
                                     <h3>Option for tab and/or side menu navigation</h3>
@@ -255,7 +226,7 @@
                                     <h3>Custom branding and push notifications</h3>
                                     <h3>Unlimited updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3WBXFwR" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3AC9Dgp" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -272,48 +243,19 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2 class="h2-price"><b>$175 per month</b></h2>
-                                    <h3><b>No setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
-                                    <h3>Development for custom mobile app and custom website</h3>
+                                    <h2><b>$600 for app & website</b></h2>
+                                    <h2 class="h2-price"><b>$60 per month</b></h2>
+                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3>Development for custom mobile app and website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Unlimited updates made as needed to publish updated content.</h3>
+                                    <h3><b>$50 per year for hosting</b></h3><br>
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://bit.ly/3NNDbgy" target="_blank"><b>Get Started!</b></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-boxes-stacked"></i>&nbsp;
-                                    Mobile App Bundle
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    <h2><b>$100 per month per app</b></h2>
-                                    <h3><b>No setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
-                                    <h3>Two or more apps developed</h3>
-                                    <h3>Development for custom mobile app and custom website</h3>
-                                    <h3>Deployment to both the Apple and Google app stores</h3>
-                                    <h3>Option for tab and/or side menu navigation</h3>
-                                    <h3>No page limit!</h3>
-                                    <h3>No limit for feature integrations!</h3>
-                                    <h3>Unlimited updates made as needed to publish updated content</h3>
-                                    <h3><b><i>SAVE $50 PER MONTH PER APP!</i></b></h3>
-                                    <h3><b><i>GREAT OPTION FOR MULTIPLE APPS!</i></b></h3><br>
-                                    <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3TfSm39" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://bit.ly/3go3Y6X" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
