--- a/website-development.html
+++ b/website-development.html
@@ -149,14 +149,14 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$100 per month</b></h2>
-                                    <h3><b>No setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
-                                    <h3><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h2><b>$500 per website</b></h2>
+                                    <h2 class="h2-price"><b>$50 per month</b></h2>
+                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
                                     <h3>No page minimum or maximum!</h3>
                                     <h3><b>$50 per year for hosting</b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3ekiZWf" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3hWVxjf" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -173,18 +173,19 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2 class="h2-price"><b>$250 per month</b></h2>
-                                    <h3><b>No setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
-                                    <h3>Development for custom mobile app and custom website</h3>
+                                    <h2><b>$1,000 for app & website</b></h2>
+                                    <h2 class="h2-price"><b>$100 per month</b></h2>
+                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3>Development for custom mobile app and website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Unlimited updates made as needed to publish updated content.</h3>
-                                    <h3><b><i>SAVE $50 PER MONTH!</i></b></h3>
+                                    <h3><b>$50 per year for hosting</b></h3><br>
+                                    <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://bit.ly/3ESi5eb" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -205,14 +206,15 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$50 per month</b></h2>
-                                    <h3><b>No setup fee!</b></h3>
+                                    <h2><b>$350 per website</b></h2>
+                                    <h2 class="h2-price"><b>$35 per month</b></h2>
+                                    <h3><b>$100 setup fee!</b></h3>
                                     <h3><b>No upfront costs!</b></h3>
-                                    <h3><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
                                     <h3>No page minimum or maximum!</h3>
                                     <h3><b>$50 per year for hosting</b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3UTCrsL" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3XlQWr9" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -229,18 +231,19 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2 class="h2-price"><b>$175 per month</b></h2>
-                                    <h3><b>No setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
-                                    <h3>Development for custom mobile app and custom website</h3>
+                                    <h2><b>$600 for app & website</b></h2>
+                                    <h2 class="h2-price"><b>$60 per month</b></h2>
+                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3>Development for custom mobile app and website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Unlimited updates made as needed to publish updated content.</h3>
+                                    <h3><b>$50 per year for hosting</b></h3><br>
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://bit.ly/3NNDbgy" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://bit.ly/3go3Y6X" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
